# BrainrotGen

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  config.py  main.py
app/api/v1/: router.py
backend/: config.py  main.py
backend/api/v1/: router.py
backend/api/v1/endpoints/: generate.py  items.py
backend/clients/: elevenlabs_client.py
backend/service/: __init__.py  poller.py  quota.py  video.py
db/: connector.py
db/models/: __init__.py  item.py  request.py
db/schemas/: __init__.py  item.py  request.py
tests/: test_duration.py
utils/: tts.py
web/: app.py
